--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/seanxuu/EmbodiedUS/" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -174,7 +174,7 @@
                 </span>
                 <!-- Dataset Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/seanxuu/EmbodiedUS" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="far fa-images"></i>
                     </span>
