--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </span>
             </div> -->
             <div class="is-size-5 publication-authors">
-              <a href="https://seanxuu.github.io/">Huan XU</a><sup>1</sup>,</span>
+              <a href="https://github.com/seanxuu">Huan XU</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="https://scholar.google.com.hk/citations?user=XujjZmUAAAAJ&hl=zh-CN">Jinlin
                   Wu</a><sup>1,2</sup>,
