--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <meta name="keywords" content="Embodied Intelligence, Large Language Model, Ultrasound Robotics">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Transforming Surgical Interventions with Embodied Intelligence for Ultrasound Robotics</title>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2WL8K2YBJ0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2WL8K2YBJ0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-2WL8K2YBJ0');
-</script>
+    gtag('config', 'G-2WL8K2YBJ0');
+  </script>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
@@ -83,7 +83,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Transforming Surgical Interventions with Embodied Intelligence for Ultrasound Robotics</h1>
+            <h1 class="title is-1 publication-title">Transforming Surgical Interventions with Embodied Intelligence for
+              Ultrasound Robotics</h1>
             <!-- <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://keunhong.com">Keunhong Park</a><sup>1</sup>,</span>
@@ -154,18 +155,11 @@
                     <span>arXiv</span>
                   </a>
                 </span>
-                <!-- Video Link. -->
-                <span class="link-block">
-                  <a href="https://www.youtube.com/watch?" class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-youtube"></i>
-                    </span>
-                    <span>Video</span>
-                  </a>
-                </span>
+
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/seanxuu/EmbodiedUS/" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/seanxuu/EmbodiedUS/"
+                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -174,7 +168,8 @@
                 </span>
                 <!-- Dataset Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/seanxuu/EmbodiedUS" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/seanxuu/EmbodiedUS"
+                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="far fa-images"></i>
                     </span>
@@ -197,7 +192,7 @@
           <span class="EmbodiedUS"></span>The proposed system framework.
         </h2>
       </div>
-    </div> 
+    </div>
   </section>
 
 
@@ -207,7 +202,7 @@
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-steve">
             <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-              <source src="./static/videos/steve.mp4" type="video/mp4">
+              <source src="./static/videos/Carotid artery.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item item-chair-tp">
@@ -280,17 +275,20 @@
         </div>
       </div>
       <!--/ Abstract. -->
-
+      <!-- Spacer -->
+      <div style="margin-bottom: 5rem;"></div>
+      <!-- Spacer -->
       <!-- Paper video. -->
-      <!-- <div class="columns is-centered has-text-centered">
+      <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
           <h2 class="title is-3">Video</h2>
           <div class="publication-video">
-            <iframe src="https://www.youtube.com/embed/MrKrnHhk8IA?rel=0&amp;showinfo=0" frameborder="0"
-              allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <video controls>
+              <source src="static/video/artery.mp4" type="video/mp4">
+            </video>
           </div>
         </div>
-      </div> -->
+      </div>
       <!--/ Paper video. -->
     </div>
   </section>
@@ -342,11 +340,11 @@
 
           <!-- Interpolating. -->
 
-          
-          <!--/ Interpolating. -->
 
-          <!-- Re-rendering. -->
- 
+      <!--/ Interpolating. -->
+
+      <!-- Re-rendering. -->
+
       <!--/ Animation. -->
 
 
@@ -415,7 +413,8 @@
                 Commons Attribution-ShareAlike 4.0 International License</a>.
             </p>
             <p>
-              Thanks for <strong>Nerfies</strong> provides<a href="https://github.com/nerfies/nerfies.github.io"> templete</a> of this website.
+              Thanks for <strong>Nerfies</strong> provides<a href="https://github.com/nerfies/nerfies.github.io">
+                templete</a> of this website.
             </p>
             <!-- <p>
               This means you are free to borrow the <a href="https://github.com/nerfies/nerfies.github.io">source
